<resources>
    <string name="cpigeon_intro">    中鸽网（亦称中国信鸽网或中鸽信鸽网）是专业的信鸽行业门户网站，创办于2005年6月。是目前信鸽（赛鸽）领域唯一的公益性信鸽专业门户平台，旨在为全球信鸽爱好者提供免费的信鸽资讯服务，同时为信鸽协会、赛鸽俱乐部、赛鸽公棚等信鸽企业提供形象展示、信息发布、比赛统计、比赛视频分享、信鸽交流、比赛直播等相关网络支持及服务。</string>
    <string name="app_name">中鸽网</string>
    <string name="regist_new_user">新用户注册</string>
    <string name="reset_password">重置密码</string>
    <string name="sentence_not_watch_pay_agreement_prompt">请仔细阅读并同意《中鸽网支付协议》</string>
    <string name="sentence_not_watch_regist_agreement_prompt">请仔细阅读并同意《中鸽网注册协议》</string>
    <string name="confirm">确定</string>
    <string name="please_enter_the_correct_phone_number">请输入正确的手机号码</string>
    <string name="prompt">提示</string>
    <string name="user_name">用户名</string>
    <string name="please_login">请您登陆</string>
    <string name="spik">跳过</string>
    <string name="search_prompt_has_key">搜索“%s”</string>
    <string name="search_prompt_clear_key">清除搜索</string>
    <string name="function_introduction">功能介绍</string>
    <string name="version_information">版本信息</string>
    <string name="version_information_gs">成都市中鸽科技有限公司</string>
    <string name="version_information_c" translatable="false">Copyright © 2006- 2017 All rights reserved.</string>
    <string name="user_agreement">用户协议</string>
    <string name="version_number">V1.0</string>
    <string name="submit">提交</string>
    <string name="pay_password">支付密码</string>
    <string name="login_password">登陆密码</string>
    <string name="clear_cache">清理缓存</string>
    <string name="Push_Notifications">推送通知</string>
    <string name="search_online">在线搜索</string>
    <string name="Setting_Security">安全设置</string>
    <string name="Setting_Application_Score">应用评分</string>
    <string name="Check_the_new_version">检查新版本</string>

    <string name="please_enter_the_phone_received_SMS_verification_code">请输入%1$s收到的短信验证码</string>
    <string name="Then_click_one_exit_procedure">再按一次退出程序</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cage_group">插组制定</string>
    <string name="pigeons_data">集鸽数据</string>
    <string name="serach_name_or_footnumber">姓名、足环号码</string>
    <string name="report_group">插组报到</string>
    <string name="report_data">报到数据</string>
    <string name="ranking">名次</string>
    <string name="name">姓名</string>
    <string name="foot_number">足环号码</string>
    <string name="uniform_ranking">统排</string>
    <string name="pigeon_special_words_race_area" translatable="false">司放地点：</string>
    <string name="pigeon_special_words_race_ckkj" translatable="false">参考空距：</string>
    <string name="pigeon_special_words_race_kj" translatable="false">空距：</string>
    <string name="pigeon_special_words_race_xskj" translatable="false">训赛空距：</string>
    <string name="pigeon_special_words_race_bskj" translatable="false">比赛空距：</string>
    <string name="pigeon_special_words_race_sfys" translatable="false">司放羽数：</string>
    <string name="pigeon_special_words_race_tq" translatable="false">天气：</string>
    <string name="pigeon_special_words_race_sfsj" translatable="false">司放时间：</string>
    <string name="pigeon_special_words_race_sfzb" translatable="false">司放坐标：</string>
    <string name="pigeon_special_words_race_slys" translatable="false">上笼羽数：</string>
    <string name="pigeon_special_words_race_jgwb" translatable="false">集鸽完毕</string>
    <string name="pigeon_special_words_race_slwb" translatable="false">上笼完毕</string>
    <string name="pigeon_special_words_race_detial_area" translatable="false">司放地点:</string>
    <string name="pigeon_special_words_race_detial_ckkj" translatable="false">参考空距:</string>
    <string name="pigeon_special_words_race_detial_bskj" translatable="false">比赛空距:</string>
    <string name="pigeon_special_words_race_detial_hyph" translatable="false">会员棚号:</string>
    <string name="pigeon_special_words_race_detial_sgys" translatable="false">赛鸽羽色:</string>
    <string name="pigeon_special_words_race_detial_sgfs" translatable="false">赛鸽分速:</string>
    <string name="pigeon_special_words_race_detial_kj" translatable="false">空距:</string>
    <string name="pigeon_special_words_race_detial_xskj" translatable="false">训赛空距:</string>
    <string name="pigeon_special_words_race_detial_sfys" translatable="false">司放:</string>
    <string name="pigeon_special_words_race_detial_tq" translatable="false">天气:</string>
    <string name="pigeon_special_words_race_detial_fl" translatable="false">风力:</string>
    <string name="pigeon_special_words_race_detial_fx" translatable="false">风向:</string>
    <string name="pigeon_special_words_race_detial_sfsj" translatable="false">司放时间:</string>
    <string name="pigeon_special_words_race_detial_sfzb" translatable="false">司放坐标:</string>
    <string name="pigeon_special_words_race_detial_slys" translatable="false">上笼羽数:</string>
    <string name="pigeon_special_words_race_detial_jgwb" translatable="false">集鸽完毕</string>
    <string name="pigeon_special_words_race_detial_slwb" translatable="false">上笼完毕</string>
    <string name="pigeon_special_words_race_detial_cpz" translatable="false">裁判长:</string>
    <string name="pigeon_special_words_race_detial_sfz" translatable="false">司放长:</string>
    <string name="pigeon_special_words_race_detial_cpy" translatable="false">裁判员:</string>
    <string name="ranking_temp">暂排名次</string>

    <string name="format_pay_account_balance_tips">余额%1$s元,支付扣除%2$s元</string>
    <string name="format_pay_account_score_tips">我的鸽币%1$s,兑换消耗%2$s鸽币</string>
    <string name="no_cache">暂无缓存</string>
    <string name="immediate_experience">立即体验</string>
</resources>
