<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_about"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_appinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/activity_about_logo_layout_minheight">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/aciv_Logo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_about_logo_height"
                    android:layout_gravity="center_horizontal|top"
                    android:layout_marginTop="@dimen/activity_about_logo_margintop"
                    android:src="@mipmap/ic_about_logo" />

                <TextView
                    android:id="@+id/tv_app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/aciv_Logo"
                    android:layout_gravity="center_horizontal|top"
                    android:layout_marginTop="@dimen/activity_about_appname_matgintop"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/textColor_light_black"
                    android:textSize="@dimen/activity_about_appname_textsize" />

                <TextView
                    android:id="@+id/tv_version_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/tv_app_name"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_about_versionname_margintop"
                    android:gravity="center"
                    android:text="V1.0"
                    android:textColor="@color/textColor_gray_dark"
                    android:textSize="@dimen/activity_about_versionname_textsize" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/tv_version_name"
                    android:layout_marginTop="@dimen/activity_about_versionname_margintop"
                    android:gravity="left"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="0dp"
                    android:text="@string/cpigeon_intro"
                    android:textColor="@color/textColor_gray_dark"
                    android:textSize="@dimen/activity_about_company_intro_textsize" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/split_line_width"
                    android:background="@color/colorLayoutSplitLineGray" />

                <TextView
                    android:id="@+id/tv_function_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="16dp"
                    android:text="@string/function_introduction"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/activity_about_clickitem_textsize" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/split_line_width"
                    android:background="@color/colorLayoutSplitLineGray" />


                <TextView
                    android:id="@+id/tv_user_protocol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="16dp"
                    android:text="@string/user_agreement"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/activity_about_clickitem_textsize" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/split_line_width"
                    android:background="@color/colorLayoutSplitLineGray" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_about_copyright_layout_paddingbottom">

            <TextView
                android:id="@+id/tv_copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/version_information_c"
                android:textColor="@color/textColor_gray"
                android:textSize="@dimen/activity_about_copyright_textsize" />

            <TextView
                android:id="@+id/tvCompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_about_copyright_margintop"
                android:gravity="center"
                android:text="@string/version_information_gs"
                android:textColor="@color/textColor_gray"
                android:textSize="@dimen/activity_about_copyright_textsize" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
