<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/colorWhite"
              android:minHeight="@dimen/list_header_race_detial_layout_root_minheight"
              android:orientation="vertical">


    <com.cpigeon.app.utils.customview.SearchEditText
        android:id="@+id/searchEditText_race_detial"
        style="@style/searchedittextstyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_edittext_height"

        android:layout_marginLeft="@dimen/search_edittext_marginleft"
        android:layout_marginRight="@dimen/search_edittext_marginright"
        android:layout_marginTop="@dimen/search_edittext_margintop"
        android:hint="@string/serach_name_or_footnumber"
        app:search_gravity="left"/>

    <LinearLayout
        android:id="@+id/layout_data_type_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/search_edittext_marginbottom"
        android:layout_marginTop="@dimen/search_edittext_margintop"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/list_header_race_detial_layout_datatype_minheight"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/list_header_race_detial_data_3"
                style="@style/raceDetialDataType"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:text="@string/pigeons_data"/>

            <TextView
                android:id="@+id/list_header_race_detial_data_4"
                style="@style/raceDetialDataType"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:text="@string/cage_group"/>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/split_line_width"
        android:layout_alignParentBottom="true"
        android:background="@color/colorLayoutSplitLineGray"></View>

    <RelativeLayout
        android:id="@+id/race_detial_info_match_name_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_header_race_detial_layout_racename_height">

        <ImageView
            android:id="@+id/race_detial_info_detial_show"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/list_header_race_detial_imageview_racedetialshow_marginright"
            app:srcCompat="@drawable/svg_ic_down_stroke_gray"/>

        <com.cpigeon.app.utils.customview.MarqueeTextView
            android:id="@+id/race_detial_info_textview_racename"
            style="@style/Marquee"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_header_race_detial_textview_racename_height"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/race_detial_info_detial_show"
            android:gravity="center"
            android:text="集鸽完毕"
            android:textColor="@color/light_black"
            android:textSize="@dimen/list_header_race_detial_textview_racename_textsize"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_line_width"
            android:layout_alignParentBottom="true"
            android:background="@color/colorLayoutSplitLineGray"></View>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_report_info_detial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/list_header_race_detial_layout_detial_padding"
        android:paddingRight="@dimen/list_header_race_detial_layout_detial_padding">


        <LinearLayout
            android:id="@+id/layout_slys"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/race_detial_match_info_title_slys"
                style="@style/report_info_detial_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="共计上传:"/>

            <TextView
                android:id="@+id/race_detial_match_info_content_slys"
                style="@style/report_info_detial_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="5868羽"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/race_detial_match_info_title_st"
                style="@style/report_info_detial_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="上传时间:"/>

            <TextView
                android:id="@+id/race_detial_match_info_content_st"
                style="@style/report_info_detial_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2016-11-25 09:33:33"/>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_line_width"
            android:background="@color/colorLayoutSplitLineGray"></View>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_gg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_layout_gg"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/list_header_race_detial_layout_gg_paddingbottom"
        android:paddingLeft="@dimen/list_header_race_detial_layout_gg_paddingleft"
        android:paddingRight="@dimen/list_header_race_detial_layout_gg_paddingright"
        android:paddingTop="@dimen/list_header_race_detial_layout_gg_paddingtop">

        <com.cpigeon.app.utils.customview.MarqueeTextView
            android:id="@+id/list_header_race_detial_gg"
            style="@style/Marquee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/list_header_race_detial_gg_minheight"
            android:text="公告："
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/list_header_race_detial_textview_gg_textsize"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_list_table_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        android:minHeight="@dimen/list_header_race_detial_layout_tableheader_minheight"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/list_header_race_detial_table_header_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:gravity="center"
            android:text="@string/ranking_temp"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/list_header_race_detial_textview_tableheader_textsize"/>

        <TextView
            android:id="@+id/list_header_race_detial_table_header_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/list_header_race_detial_textview_tableheader_textsize"/>

        <TextView
            android:id="@+id/list_header_race_detial_table_header_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/foot_number"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/list_header_race_detial_textview_tableheader_textsize"/>

        <TextView
            android:id="@+id/list_header_race_detial_table_header_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:gravity="center"
            android:text="@string/uniform_ranking"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/list_header_race_detial_textview_tableheader_textsize"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>
